# htmlentity

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.sh  codecov.yml
.github/workflows/: test.yml
benches/: benchmark.rs
node/: benchmark.ts  package.json  test.ts  tsconfig.json
src/: data.rs  entities.rs  entity.rs  lib.rs  main.rs  search.rs  types.rs  wasm.rs
tests/: escape.rs
