[package]
edition = "2018"
name = "htmlentity"
version = "1.1.1"
authors = ["ganmin <jxz_211@163.com>"]
keywords = ["entity", "html-entity", "html-escape", "html-encode", "html-decode"]
categories = ["encoding", "parsing", "wasm"]
description = "Encode a unicode character to html entity, decode html entity to a unicode character."
repository = "https://github.com/fefit/htmlentity"
homepage = "https://github.com/fefit/htmlentity"
exclude = ["node/**/*.*","pkg/**/*.*", "build.sh", "codecov.yml", ".travis.yml"]
license = "MIT"


[dependencies]
lazy_static = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.68"  }
num-derive = "0.3.3"
num-traits = "0.2.14"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"
grcov = "0.6.1"

[[bench]]
name = "benchmark"
harness = false

