[package]
edition = "2018"
name = "htmlentity"
version = "1.1.2"
authors = ["ganmin <jxz_211@163.com>"]
keywords = ["entity", "html-entity", "html-escape", "html-encode", "html-decode"]
categories = ["encoding", "parsing", "wasm"]
description = "Encode a unicode character to html entity, decode html entity to a unicode character."
repository = "https://github.com/fefit/htmlentity"
homepage = "https://github.com/fefit/htmlentity"
exclude = ["node/**/*.*","pkg/**/*.*", "build.sh", "codecov.yml", ".travis.yml"]
license = "MIT"

[dependencies]
lazy_static = "1.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"
grcov = "0.7.1"

[[bench]]
name = "benchmark"
harness = false

