[package]
edition = "2018"
name = "htmlentity"
version = "1.3.2"
authors = ["ganmin <jxz_211@163.com>"]
keywords = [
  "entity",
  "html-entity",
  "html-escape",
  "html-encode",
  "html-decode",
]
categories = ["encoding", "parsing"]
description = "A library for encoding and decoding HTML entities."
repository = "https://github.com/fefit/htmlentity"
homepage = "https://github.com/fefit/htmlentity"
exclude = ["node/**/*.*", "pkg/**/*.*", "build.sh", "codecov.yml"]
license = "MIT"

[dependencies]
anyhow = "1.0.70"
lazy_static = "1.4.0"
thiserror = "1.0.40"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.4.0"
grcov = "0.8.16"

[[bench]]
name = "benchmark"
harness = false
